Testing the synchronized method for http calls.